--- a/styles.css
+++ b/styles.css
@@ -165,13 +165,14 @@ header nav a:hover {
 
 }
 
+
 .name-container {
-    position: fixed; /* Keeps the name and tagline fixed in the viewport */
-    top: 2rem; /* Distance from the top of the viewport */
+    position: fixed; 
+    top: 2rem; 
     right: 5rem; 
     text-align: right;
     color: #f1e9d4;
-    z-index: 1000; /* Ensure it stays on top of other elements */
+    z-index: 1000; 
 }
 
 .name-container .name {
@@ -215,9 +216,32 @@ header nav a:hover {
     width: 100%;
     height: 100%;
     display: flex;
+    
     align-items: center;
     justify-content: center;
 }
+
+.carouselname-container {
+   position: fixed; 
+    top: 2rem; 
+    right: 5rem; 
+    text-align: right;
+    color: #f1e9d4;
+    mix-blend-mode: difference;
+    z-index: 1000; 
+}
+
+.carouselname-container .name {
+    font-size: 2rem;
+    margin: 0;
+}
+
+.carouselname-container .tagline {
+    font-size: 1rem;
+    color: #d1f5ff;
+    margin: 0;
+}
+
 
 /* Slide (Video + Caption) */
 .slide {
